bk_ida/gccida/c3/emit_block_move
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_block_move/src/expr.c:2099:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_block_move/src/expr.c:2103:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_block_move/src/expr.c:2117:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v35; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_block_move/src/expr.c:2118:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v36; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_block_move/src/expr.c:2120:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v38; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_block_move/src/expr.c:2121:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_block_move/src/expr.c:2122:5: error: expected ';' after expression
tree v40; // rbx 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_block_move/src/expr.c:2122:6: error: use of undeclared identifier 'v40'
tree v40; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_block_move/src/expr.c:2123:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v41; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_block_move/src/expr.c:2124:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v42; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_block_move/src/expr.c:2125:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v43; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_block_move/src/expr.c:2126:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v44; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_block_move/src/expr.c:2127:5: error: expected ';' after expression
tree v45; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_block_move/src/expr.c:2127:6: error: use of undeclared identifier 'v45'
tree v45; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_block_move/src/expr.c:2128:5: error: expected ';' after expression
tree v46; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_block_move/src/expr.c:2128:6: error: use of undeclared identifier 'v46'
tree v46; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_block_move/src/expr.c:2135:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = ( __int64)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_block_move/src/expr.c:2139:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = ( __int64)y[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_block_move/src/expr.c:2159:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( __int64)y[1]; 
               ^~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_block_move/src/obj/expr.o] Error 1
